<resources>
    <string name="app_name">ReviewLifeRepeat</string>
    <string name="new_review">New Review</string>
    <string name="past_reviews">Past Reviews</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="question_goes_here">Question goes here.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="file_name_goes_here">File Name Goes Here</string>
    <string name="previous_file">Previous File</string>
    <string name="delete">Delete</string>
    <string name="next_file">Next File</string>
    <string name="save">Save</string>
</resources>