<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonNewReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPastReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_reviews"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/buttonEditQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_questions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewReview"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/buttonPrintReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Print Reviews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditQuestions"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>