<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrintReviewsActivity">

    <Button
        android:id="@+id/buttonPreviousFileForPrint"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/previous_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewFileNameForPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name_goes_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textViewFileTextForPrint"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFileNameForPrint"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/buttonPrintStarting"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="Print Starting"
        app:layout_constraintBottom_toTopOf="@+id/buttonPreviousFileForPrint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonNextFileForPrint"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="@string/next_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonPrintEnding"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:text="Print Ending"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextFileForPrint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>